<resources>
    <string name="app_name">dfApp</string>
    <string name="loginusername">请输入账号</string>
    <string name="loginpassword">请输入密码</string>
    <string name="login">登录</string>
    <string name="resgister">注册</string>
    <string name="Retrieve">找回密码</string>
    <string name="agreement">已阅读并同意《<u>用户协议</u>》</string>
    <string name="rememberpassword">记住密码</string>
    <string name="open">开启</string>
    <string name="openlogin">自动登录</string>
    <string name="schedule_input_you_do_thing">Input what to do</string>
    <string name="work">工作</string>
    <string name="office">在办</string>
    <string name="information">资讯</string>
    <string name="setup">设置</string>
    <string name="informationCommunicate">资讯沟通</string>
    <string name="officeMatter">在办事项</string>
    <string name="setupSystem">系统设置</string>
    <string name="workTask">工作任务</string>
    <string name="noHttp">网络连接错误</string>
    <string name="carid">编号</string>
    <string name="applyname">申请人</string>
    <string name="cardate">出车日期</string>
    <string name="nonet">网络连接错误</string>
    <string name="Uploadfailed">上传失败</string>
    <string name="Uploadsuccess">上传成功</string>
    <string name="signloadsuccess">签到成功</string>
    <string name="signloadfailed">签到失败</string>
    <string name="disNetworking">网络连接不可用,请稍候再试</string>
    <string name="listfooterview_normal">查看更多</string>
    <string name="listfooterview_ready">松开载入更多</string>
    <string name="action_settings">Settings</string>
    <string name="login_his_later">请稍后</string>
    <string name="common_loading">正在加载…</string>
    <string name="common_loading_error">加载失败，请检查网络！</string>
    <string name="common_view_loading">正在拼命加载数据…</string>
    <string name="common_view_release">释放加载</string>
    <string name="common_view_loading_ok">加载成功</string>
    <string name="common_i_know">知道了</string>
    <string name="comon_retry">重试</string>
    <string name="common_cancel">取消</string>
    <string name="common_swipe_to_load_more">上拉加载更多</string>
    <string name="common_load_more">加载更多</string>
    <string name="common_load_complete">加载完成</string>
    <string name="common_refresh_complete">刷新完成</string>
    <string name="common_swipe_to_refresh">下拉刷新</string>
    <string name="common_set_read">标记为已读</string>
    <string name="common_set_unread">标记为未读</string>
    <string name="txt_search">搜索</string>
    <string name="txt_route_start">添加开始点</string>
    <string name="txt_route_via_one">添加途经点1</string>
    <string name="txt_route_via_two">添加途经点2</string>
    <string name="txt_route_via_there">添加途经点3</string>
    <string name="txt_route_end">添加结束点</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="context_menu">Context menu</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="empty"></string>
    <string name="main_tab_session">会话</string>
    <string name="main_tab_contact">通讯录</string>
    <string name="user_profile">个人名片</string>
    <string name="logindenglu">登录</string>
    <string name="logining">登录中\u2026</string>
    <string name="register">注册</string>
    <string name="registering">注册中\u2026</string>
    <string name="agree">同意</string>
    <string name="reject">拒绝</string>
    <string name="network_is_not_available">网络连接失败，请检查你的网络设置</string>
    <string name="login_hint_account">请输入帐号</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="input_account">请输入帐号，限20位字母或者数字</string>
    <string name="register_account_tip">帐号限20位字母或者数字</string>
    <string name="input_nickname">请输入昵称，限10位汉字、字母或者数字</string>
    <string name="register_nick_name_tip">昵称限10位汉字、字母或者数字</string>
    <string name="input_password">请输入密码，6~20位字母或者数字</string>
    <string name="register_password_tip">密码必须为6~20位字母或者数字</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败,错误码%1$s:%2$s</string>
    <string name="login_has_account">已有帐号？直接登录</string>
    <string name="login_has_error">登陆失败</string>
    <string name="done">完成</string>
    <string name="latest_message_draft_prefix">[草稿] </string>
    <string name="main_msg_unread_msg_count">[%d条]</string>
    <string name="out_time">超时</string>
    <string name="prepare_data">正在准备数据...</string>
    <string name="readed">已读</string>
    <string name="about">关于</string>
    <string name="logout">注销</string>
    <string name="version">版本号:</string>
    <string name="account">帐号:</string>
    <string name="chat">聊天</string>
    <string name="add">添加</string>
    <string name="remove">移除</string>
    <string name="network_forbidden_login">你被服务器禁止登录，详询客服</string>
    <string name="menu">菜单</string>
    <string name="verify_reminder">验证提醒</string>
    <string name="without_content">暂无</string>
    <string name="create">新建</string>
    <string name="delete_tip">删除提示</string>
    <string name="delete_system_message">删除该条系统消息？</string>
    <string name="delete_success">删除成功</string>
    <string name="clear_all_success">清空成功</string>
    <string name="login_failed">帐号或密码错误</string>
    <string name="login_exception">无效输入</string>
    <string name="kick_out">帐号在其它设备登录</string>
    <string name="edittext_length_tips">你输入的字数已经超过了限制！</string>
    <string name="file_transfer">文件云存储</string>
    <string name="file_browser">文件浏览器</string>
    <string name="upload_text">上传</string>
    <string name="download_text">下载</string>
    <string name="now_allow_space">不能含有空格</string>
    <string name="how_to_get_account">如何获取帐号</string>
    <string name="multi_client_management">多端登录管理</string>
    <string name="kick_other_client_prompt">踢掉 %1$s</string>
    <string name="openkaiqi">开启</string>
    <string name="close">关闭</string>
    <string name="search_advanced_team">搜索高级群</string>
    <string name="net_broken">当前网络不可用</string>
    <string name="nim_status_unlogin">未登录</string>
    <string name="nim_status_connecting">连接中...</string>
    <string name="nim_status_logining">登录中...</string>
    <string name="copyright">Copyright ©1997-2017 网易公司版权所有</string>
    <string name="edit_nick">修改昵称</string>
    <string name="user_not_exsit">该用户不存在</string>
    <string name="user_tips">请检查你输入的帐号与密码是否正确</string>
    <string name="edit">编辑</string>
    <string name="input_panel_guess">猜 拳</string>
    <string name="input_panel_audio_call">语音通话</string>
    <string name="input_panel_video_call">视频通话</string>
    <string name="input_panel_file">发送文件</string>
    <string name="input_panel_RTS">白 板</string>
    <string name="input_panel_snapchat">阅后即焚</string>
    <string name="input_panel_tip">Tip</string>
    <string name="message_history_query">云消息记录</string>
    <string name="message_search_title">搜索本地消息记录</string>
    <string name="message_clear">清空本地消息记录</string>
    <string name="message_info">聊天信息</string>
    <string name="add_friend">加为好友</string>
    <string name="remove_friend">删除好友</string>
    <string name="begin_chat">聊天</string>
    <string name="remove_friend_tip">删除好友后，将同时解除双方的好友关系</string>
    <string name="remove_friend_success">删除好友成功</string>
    <string name="add_friend_self_tip">不能添加自己为好友</string>
    <string name="add_friend_verify_tip">好友验证请求</string>
    <string name="black_list_tip">你不会接收到列表中联系人的任何消息</string>
    <string name="create_team_activity">创建群聊</string>
    <string name="add_buddy">添加好友</string>
    <string name="create_normal_team">创建讨论组</string>
    <string name="team_apply_sending">发送中…</string>
    <string name="no_team">您还没有群</string>
    <string name="no_normal_team">您还没有讨论组</string>
    <string name="team_search_hint">请输入群号进行搜索</string>
    <string name="team_number_not_exist">群号不存在</string>
    <string name="team_join">加入群组</string>
    <string name="team_join_success">成功加入群: %1$s</string>
    <string name="team_apply_to_join_send_success">申请已发出</string>
    <string name="has_exist_in_team">已经在群里</string>
    <string name="toolbar_mutli_new_msg_tips">个联系人发来新消息</string>
    <string name="toolbar_new_msg_coming_ticker_text"> 有新消息</string>
    <string name="toolbar_new_msg_general_tips">你收到一条新消息</string>
    <string name="toolbar_add_buddy_request_tips">请求添加你为好友</string>
    <string name="toolbar_add_buddy_verify_tips">通过了你的好友请求</string>
    <string name="toolbar_new_notification_general_tips">你收到一条新通知</string>
    <string name="custom_notification">自定义通知</string>
    <string name="select_custom_notification_target">选择发送对象</string>
    <string name="send_custom_notification_tip">请输入要发送的内容</string>
    <string name="send_custom_notification_success">自定义通知发送成功</string>
    <string name="send_custom_notification_failed">自定义通知发送失败</string>
    <string name="send_custom_notification_to_buddy">发送给好友</string>
    <string name="send_custom_notification_to_team">发送给群组</string>
    <string name="msg_type_image">图片</string>
    <string name="msg_type_audio">语音</string>
    <string name="title_activity_add_buddy">添加好友</string>
    <string name="location_init_map_error">初始化地图服务失败</string>
    <string name="location_navigate">导航</string>
    <string name="self_location">我在这个位置</string>
    <string name="location_unable_to_get_you">暂时无法获取您的位置</string>
    <string name="location_loading">正在定位</string>
    <string name="location_map">地图定位</string>
    <string name="my_location">我的位置</string>
    <string name="location_address_unkown">该位置信息暂无</string>
    <string name="format_mylocation">我的位置：%s</string>
    <string name="location_address_fail">获取位置信息失败</string>
    <string name="tools_selected">选择工具</string>
    <string name="friends_map_navigation_web">在网页中打开</string>
    <string name="location_open_map_error">打开地图出错</string>
    <string name="about_custom_button1">自定义1</string>
    <string name="about_clear_msg_history">清空所有聊天记录</string>
    <string name="clear_msg_history_success">聊天记录已清空</string>
    <string name="nim_status_bar_multi_messages_incoming">%1$d位联系人有新消息</string>
    <string name="nim_status_bar_ticker_text">%1$s有新消息</string>
    <string name="nim_status_bar_image_message">%1$s发来一条图片消息</string>
    <string name="nim_status_bar_audio_message">%1$s发来一条语音消息</string>
    <string name="nim_status_bar_video_message">%1$s发来一条视频消息</string>
    <string name="nim_status_bar_file_message">%1$s发来一条文件消息</string>
    <string name="nim_status_bar_location_message">%1$s分享了一个地理位置</string>
    <string name="nim_status_bar_notification_message">%1$s: 通知消息</string>
    <string name="nim_status_bar_custom_message">%1$s: 自定义消息</string>
    <string name="nim_status_bar_unsupported_message">%1$s: 无法显示该内容</string>
    <string name="nim_status_bar_hidden_msg_content">你收到一条新消息</string>
    <string name="doodle">白板</string>
    <string name="start_session">正在邀请对方，请稍后</string>
    <string name="callee_reject">对方拒绝了本次请求</string>
    <string name="callee_ack_timeout">对方未接受请求</string>
    <string name="receive_session">对方发起白板演示</string>
    <string name="start_session_record">我发起了白板演示</string>
    <string name="session_end_record">白板演示已结束</string>
    <string name="end_session_tip_head">退出白板演示</string>
    <string name="end_session_tip_content">退出后，你将不再接收白板演示的消息内容</string>
    <string name="target_has_leave_session">对方已离开</string>
    <string name="target_has_end_session">对方结束白板演示</string>
    <string name="accept_session">接受</string>
    <string name="reject_session">拒绝</string>
    <string name="doodle_back">上一步</string>
    <string name="doodle_clear">清屏</string>
    <string name="settings">设置</string>
    <string name="no_disturb">免打扰</string>
    <string name="multiport_push">PC/Web在线推送</string>
    <string name="msg_notice">消息提醒</string>
    <string name="setting_about">关于</string>
    <string name="setting_close">已关闭</string>
    <string name="no_disturb_tips">在设定的时间段内云信消息将不再提醒</string>
    <string name="time_from">从</string>
    <string name="time_to">至</string>
</resources>