<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dimen_100"
        android:paddingTop="@dimen/dimen_100">

        <ImageView
            android:layout_width="@dimen/dimen_250"
            android:layout_height="@dimen/dimen_250"
            android:src="@mipmap/daoran" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="@dimen/dimen_60">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center|left"
            android:hint="@string/loginusername"
            android:maxLength="10"
            android:paddingBottom="@dimen/dimen_30"
            android:paddingLeft="@dimen/dimen_42"
            android:paddingRight="@dimen/dimen_42"
            android:paddingTop="@dimen/dimen_30"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/defaultTextColor"
            android:textSize="@dimen/dimen_50sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_42"
            android:background="@null"
            android:gravity="center|left"
            android:hint="@string/loginpassword"
            android:maxLength="20"
            android:paddingBottom="@dimen/dimen_30"
            android:paddingLeft="@dimen/dimen_42"
            android:paddingRight="@dimen/dimen_42"
            android:paddingTop="@dimen/dimen_30"
            android:password="true"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/defaultTextColor"
            android:textSize="@dimen/dimen_50sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_42"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_42"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxPw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rememberpassword"
                    android:textColor="@color/defaultTextColor"
                    android:textSize="@dimen/dimen_40sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dimen_42"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkboxopen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/openlogin"
                    android:textColor="@color/defaultTextColor"
                    android:textSize="@dimen/dimen_40sp" />
            </LinearLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_42"
            android:layout_marginRight="@dimen/dimen_42"
            android:layout_marginTop="@dimen/dimen_60"
            android:background="@drawable/login_red_btn_selector"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_60sp" />
    </LinearLayout>

</LinearLayout>